@@ -6,10 +6,4 @@ libRivetCore_la_SOURCES = \
   Analysis.cc AnalysisLoader.cc AnalysisInfo.cc \
   AnalysisHandler.cc Run.cc ProjectionHandler.cc HistoHandler.cc
 
-libRivetCore_la_CPPFLAGS = $(AM_CPPFLAGS)
-if WITHOUT_YAML_CPP
-libRivetCore_la_CPPFLAGS += -I$(top_srcdir)/src/Tools
-else
-libRivetCore_la_CPPFLAGS += -I$(YAML_CPPINCPATH)
-endif
-libRivetCore_la_CPPFLAGS += $(CPPFLAGS)
+libRivetCore_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(YAML_CPPINCPATH)
